--- a/src/common.css
+++ b/src/common.css
@@ -14,6 +14,14 @@ body {
   font-weight: bold;
   font-style: italic;
 }
+.st {
+  margin-bottom: 1.5rem;
+}
+.sensor {
+  background-color: var(--bs-gray-dark);
+  border-radius: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .snName {
   font-size: 1.5rem;
 }
@@ -22,5 +30,8 @@ body {
   margin: 0 auto;
 }
 .snMs {
-  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+}
+#station-chart {
+  margin-bottom: 1rem;
 }
