Eta fix + i2c config + js differed load + station xml fix + bme280 alt address fix

--- a/src/common.css
+++ b/src/common.css
@@ -10,7 +10,7 @@ body {
   font-size: 2rem;
   text-align: center;
 }
-.welcome > .station-name {
+.welcome > .st-n {
   font-weight: bold;
   font-style: italic;
 }
